# colgatefinal

colgatefinal/: .env.example  .gitignore  INFORME_TECNICO.md  Modelfile  README.md  hand.toml  informe.css  ingest.py  main.py  pyproject.toml  taller3.txt  tsne_analysis.py  webhook_server.py
colgatefinal/data/: datos_estructurados.json  knowledge_base_clean.txt
colgatefinal/scripts/: ingest.py  telegram_bridge.py  whatsapp_bridge.py
