[project]
name = "colgatefinal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "matplotlib>=3.10.9",
    "mistralai>=2.4.9",
    "numpy>=2.4.6",
    "scikit-learn>=1.9.0",
    "uvicorn>=0.49.0",
]
