[project]
name = "colgatefinal"
version = "0.1.0"
description = "Agente conversacional WhatsApp para Colgate-Palmolive Colombia — OpenFang 0.6.9 + Mistral AI"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "matplotlib>=3.10.9",
    "mistralai>=2.4.9",
    "numpy>=2.4.6",
    "scikit-learn>=1.9.0",
]
